Refactor SellPostService